examples/Errors/204.zph
random # RNG:INT|0->20a;
